# nbparameterise

./: .gitignore  .travis.yml  README.rst  SETUP_PYTHON2_KERNEL.md  Stock display.ipynb  batch.py  batch_eg.py  flit.ini  kernel.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
examples/: Coin Price.ipynb  Currency Conversion display.ipynb  Fibonacci.ipynb  Stock display.ipynb  batch.py  htmlform.py  webapp.py
examples/static/: README.rst  styles.css
nbparameterise/: __init__.py  __main__.py  code.py  htmlform.py  webapp.py
nbparameterise/code_drivers/: python.py  python2.py  python3.py
tests/: matplot.ipynb  sample.ipynb  sample_parameters_tag.ipynb  test_basic.py  test_matplot.py  test_parameters_tag.py
