[build-system]
requires = ["flit_core >=3.2,<3.3"]
build-backend = "flit_core.buildapi"

[project]
name = "nbparameterise"
authors = [
    {name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Jupyter",
]
readme = "README.rst"
dependencies = ["nbconvert", "astsearch"]
requires-python = ">=3.6"
dynamic = ['version', 'description']

[project.urls]
Source = "https://github.com/takluyver/nbparameterise"
