[build-system]
requires = ["flit_core >=3.2,<3.3"]
build-backend = "flit_core.buildapi"

[project]
name = "nbparameterise"
authors = [
    {name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Jupyter",
]
readme = "README.rst"
dependencies = ["nbconvert", "astsearch"]
requires-python = ">=3.6"
dynamic = ['version', 'description']

[project.urls]
Source = "https://github.com/takluyver/nbparameterise"

[tool.poetry]
name = "nbparameterise"
version = "0.1.0"
description = ""
authors = ["Edgar <elcchan99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
nbconvert = "^6.4.2"
astsearch = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
jupyter = "^1.0.0"
notebook = "^6.4.8"
black = "^22.1.0"
