[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nbparameterise"
authors = [
    {name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Jupyter",
]
readme = "README.rst"
dependencies = [
    "nbformat",
    "astcheck >=0.3",
]
requires-python = ">=3.8"
dynamic = ['version', 'description']

[project.urls]
Source = "https://github.com/takluyver/nbparameterise"
